# Ray_Tracer_OpenGL

./: CMakeLists.txt  LICENSE  README.md
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: main.cpp  shader.frag  shader.hpp  shader.vert  trimesh.hpp
